--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
 
 <h4>Acierto del resultado 2 puntos</h4>
 <h4>Acierto exacto 3 puntos</h4>
+
+<a href = "mailto: santiagogece@gmail.com">Enviar Email
+
+</a>
   
 </body>
